Fixed resposive alignment and list of icons

--- a/src/scss/partials/_content.scss
+++ b/src/scss/partials/_content.scss
@@ -27,16 +27,7 @@
         font-size: 1.5em;
         font-weight: 700;
         margin-bottom: 25px;
-    }
-    
-    #icons {
-        span {
-            width: 90%;
-        }
-        i {
-            padding-top: 0.5rem;
-            width: 10%;
-        }
+        margin-top: 25px;
     }
 
     #undrawCodeThinking {
@@ -48,4 +39,25 @@
     }
 }
 
+@media screen and (max-width: 1200px) {
+    #mainContentDiv {
+        font-size: 16px;
+        padding-left: 65px;
+        padding-top: 65px;
+        padding-right: 35px;
+    }
+}
 
+@media screen and (max-width: 600px) {
+    #mainContentDiv {
+        font-size: 12px;
+        padding-left: 20px;
+        padding-top: 20px;
+        padding-right: 10px;
+
+        h1 {
+            margin-bottom: 10px;
+        }
+    }
+
+}
